dev1-dp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev1-service 
spec:
  selector:
    app.kubernetes.io/instance: datapower-dev1
    app.kubernetes.io/name: datapower 
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000 
    - protocol: TCP
      port: 9090
      targetPort: 9090
