dev1-dp-route.yaml
  kind: Route
  apiVersion: route.openshift.io/v1
  metadata:
    name: dproute 
    namespace: datapower
  spec:
    host: dev1-ivt.itzroks-310000mg1w-5wkxit-6ccd7f378ae819553d37d5f2ee142bd6-0000.jp-tok.containers.appdomain.cloud
    to:
      kind: Service
      name: dev1-service 
    port:
      targetPort: 8000
